--- a/SCSS/_slider.scss
+++ b/SCSS/_slider.scss
@@ -2,8 +2,8 @@ img{
     max-width:100%;
 }
 .fullScreen{
-    position:fixed;
-    z-index:999;
+    position:absolute;
+    z-index:100;
     right: 5%;
     top: 340px;
     font-size: 35px;
